fixed visibility bug with touchscreen buttons

--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 45px;
-    display: none !important;
+    display: none;
     z-index: 5;
     padding: 10px;
     box-sizing: border-box;
